# trade-india

./: .env.example  .gitignore  CLAUDE.md  HANDOFF-topology-health.md  MIGRATION.md  README.md  conftest.py  pyproject.toml
.claude/: launch.json  settings.local.json
data/: paper_portfolio.json  portfolio_snapshot.json
design_handoff_cockpit/: README.md  Trading Bot Cockpit (v4).html  app-v4.jsx  components.jsx  data.jsx  styles-v4.css  surface_activity.jsx  surface_lab.jsx  surface_right_now.jsx  surface_system.jsx  topbar.jsx  topology.jsx
docs/: edge_thesis_v1.md
migrations/: alembic.ini  env.py
ops/: install.sh  install_live.sh  live_active.template.json  paper_active.template.json  uninstall.sh  uninstall_live.sh
policy/: HASHES  crypto_universe_v1.json  dual_momentum_sleeves_v1.json  etf_universe_v1.json  intel_feeds_v1.json  regime_protocols_v1.json  research_bot_sources_v1.json  strategy_signal_features_v1.json  strategy_taxonomy_v1.json  wheel_universe_v1.json
research/: search_space_v1.json
strategy/: config.yaml  crypto_blocklist.yaml  restricted_list.yaml  rules.md  vip_handles.yaml  watchlist.md  watchlist.yaml  wheel_allowlist.yaml  wheel_blocklist.yaml
tests/: _taxonomy.md  conftest.py  test_activity_feed_actors.py  test_adaptive_thresholds.py  test_adversarial_and_breaker.py  test_alerts.py  test_alpaca_client.py  test_alpaca_trade_stream.py  test_anthropic_client.py  test_ast_validator.py  test_audit_resolver.py  test_backtest_simulator.py  test_bar_store.py  test_benchmark.py  test_binance_geo_block.py  test_broker_call_tracker.py  test_broker_switch_event.py  test_cadence.py  test_calibration.py  test_caveat_fixes.py  test_cli.py  test_cockpit_data.py  test_cockpit_safety.py  test_coinbase_ws_stream.py  test_compliance.py  test_composite_regime.py  test_config.py  test_cost_tracker.py  test_crypto_intel_ingestor.py  test_crypto_universe.py  test_dashboard.py  test_dashboard_new_cards.py  test_data_quality.py  test_decision_lessons.py  test_decision_schema.py  test_decisions_store.py  test_diagnose_cli.py  test_digest_decisions_section.py  test_dsr.py  test_e2e_happy_paths.py  (+249 more)
tools/: alpaca_smoke.py  backfill_closed_trades.py  boot_check.py  build_project_explainer_pdf.py  build_project_overview_pdf.py  clear_fallback_flag.py  com.bharath.trading.mailbox-routine.plist  email_dark_ab.py  (+27 more)
(+720 files in other folders)
