[project]
name = "trading-bot"
version = "0.1.0"
description = "Semi-autonomous algorithmic trading bot for Alpaca paper account"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.30.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "click>=8.1",
    "python-dotenv>=1.0",
    "pandas>=2.1",
    "numpy>=1.26",
    "ta>=0.11",
    "requests>=2.31",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "croniter>=6.2.2",
    "apscheduler>=3.10.4",
    "alembic>=1.13.0",
    "optuna>=3.6.0",
    "anthropic>=0.40.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "freezegun>=1.4",
    "ruff>=0.2",
]

[project.scripts]
bot = "trading_bot.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "integration: integration tests that spawn subprocesses or hit databases",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
